# plte-scraper

./: .gitignore  .travis.yml  Cargo.toml  README.md  csv_test.csv  foo.csv
assets/: Calendar.csv  Calendar.html  calendar.csv  calendar.html  events.csv  events.json  venues.csv  venues.json
csv/: Cargo.toml  csv_test.csv
csv/src/: main.rs
mon/: Cargo.toml
mon/src/: main.rs
src/: Calendar.html  calendar.rs  common.rs  events.rs  main.rs  venues.rs
