[package]
name = "rust_csv"
version = "0.1.0"
authors = ["Mingjue <mingjue@vt.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv="1.1"
serde = "1.0.55"
mongodb = { version = "0.4.0", features = ["ssl"] }
bson = "0.14.0"

[dev-dependencies]
serde = { version = "1.0.55", features = ["derive"] }