[package]
name = "plte-cli"
version = "0.2.0"
authors = ["Mingjue <mingjue@vt.edu>", "Ronnie Song <ronniesong0809@gmail.com>", "Boxuan Zhang <pedanbox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv="1.1.3"
serde = "1.0.55"
mongodb = "0.9.1"
bson = "0.14.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
select = "0.4.3"

[dev-dependencies]
serde = { version = "1.0.55", features = ["derive"] }
